the comparison system update

--- a/client/css/all.less
+++ b/client/css/all.less
@@ -2,14 +2,13 @@
 @import '../bower_components/fonts/font-awesome.css';
 @import '../bower_components/jquery-ui/jquery-ui.css';
 @import '../bower_components/nprogress/nprogress.css';
-@import '../bower_components/bootstrap-slider/dist/css/bootstrap-slider.min.css';
+@import '../bower_components/bootstrap-slider/dist/css/bootstrap-slider.css';
 @import '../bower_components/d3_menu/d3.menu.css';
 @import '../bower_components/d3_barchart/d3.barchart.css';
 @import '../icon_library/demo.css';
 @import '../icon_library/iconfont.css';
 @import '../bower_components/font-awesome-4.7.0/css/font-awesome.min.css';
 @import '../bower_components/PatternFills/patterns.css';
-@import '../bower_components/huebee/dist/huebee.css';
 @import '../bower_components/rangeslider/dist/rangeslider.css';
 //  存储视图中的所有变量
 @import "overall-variables";
@@ -21,8 +20,12 @@
 @import 'barcode-supertree';
 @import "barcodetree-view";
 @import "barcode-distribution";
-@import "barcode-node-config";
+//@import "barcode-node-config";
+//@import "selection-config";
 @import "tree-config";
-@import 'submenu';
+//@import 'submenu';
 @import "tooltip";
 @import "lasso";
+@import "sorting";
+@import "brush-selection";
+
