--- a/client/css/barcode-distribution.less
+++ b/client/css/barcode-distribution.less
@@ -9,8 +9,6 @@
         margin-bottom: 0.5rem;
       }
       hr {
-        //margin-top: 20px;
-        margin-bottom: 2rem;
         border: 0;
         border-top: 1px solid #eee;
       }
@@ -29,9 +27,9 @@
       .distribution-levels {
         background-color: white;
       }
-      text {
-        font-size: 1rem;
-      }
+      //text {
+      //  font-size: 1rem;
+      //}
       .axis {
         stroke-width: 1px;
         path { /*x轴线*/
