--- a/client/css/barcode-supertree.less
+++ b/client/css/barcode-supertree.less
@@ -19,6 +19,7 @@
     fill: @barcode-node-color;
     stroke: white;
     stroke-width: 3px;
+    cursor: pointer;
   }
 
   .supertree-icicle-node[class~=children-highlight] {
@@ -37,7 +38,7 @@
 
   //  默认情况下对于supertree上的冰柱图的节点的额高亮
   .supertree-icicle-node[class~=default-highlight] {
-    fill: black !important;
+    fill: #222222 !important;
   }
 
   .supertree-icicle-node[class~=possible] {
@@ -65,7 +66,7 @@
   .container-bg {
     fill: white;
     stroke: #eee;
-    stroke-width: 2px;
+    stroke-width: 1px;
   }
 
   .category-g > .category-bg {
