--- a/client/css/barcodetree-view.less
+++ b/client/css/barcodetree-view.less
@@ -1,245 +1,11 @@
 #barcodetree-view {
-  #barcodetree-svg {
-    //  barcode上增加icon
-    .icon {
-      width: 1rem;
-      height: 1rem;
-      vertical-align: -0.15rem;
-      fill: currentColor;
-      overflow: hidden;
-    }
-    rect.bg {
-      stroke: #ddd;
-      stroke-width: 0.25px;
-    }
-    rect.barcode-bg {
-      fill: #dfdfdf; //#fff
-      opacity: 1;
-    }
-    rect.bg-odd {
-      fill: #fff; //#f9f9f9
-    }
-    rect.bg-even {
-      fill: #fff;
-    }
-    .bg[class~=hovering-highlight] {
-      //stroke: #1F77B4;
-      //stroke-width: 2;
-      //stroke-alignment: outside;
-      opacity: 1 !important;
-      fill: #efefef;
-    }
-    .bg[class~=set-operation] {
-      fill: #f3f3f3;
-    }
-    .bg[class~=compare-based-selection] {
-      //stroke: #1F77B4;
-      //stroke-width: 2;
-      //stroke-alignment: outside;
-      fill: #efefef;
-    }
-    .bg[class~=set-operation-selection-selection] {
-      //stroke: #1F77B4;
-      //stroke-width: 2;
-      //stroke-alignment: outside;
-      fill: #efefef;
-    }
-    .bg[class~=barcode-tree-filter] {
-      fill: #efefef;
-    }
-    .barcodetree-link {
-      fill: none;
-      stroke: #dfdfdf;
-      shape-rendering: auto;
-    }
-    .barcode-node {
-      fill: @barcode-node-color;
-    }
-    .barcode-node.node-existed {
-      fill: @barcode-node-color;
-    }
-
-    .collapse-triangle {
-      fill: @barcode-node-color;
-    }
-
-    .tooth {
-      fill: @barcode-node-color;
-    }
-
-    .barcode-node.node-hidden {
-      opacity: 0;
-      visibility: hidden;
-    }
-
-    .barcode-node.template-stroke {
-      //opacity: 0.4;
-      //stroke: black !important;
-      stroke-width: 0.05rem !important;
-    }
-
-    .barcode-node.node-missed_max-stroke {
-      fill: white !important;
-      stroke: #aaa !important;
-      stroke-width: 2px;
-      opacity: 0.4;
-    }
-
-    .barcode-node-level-3.node-missed {
-      stroke-width: 1px !important;
-    }
-
-    .barcode-node-level-2.node-missed {
-      stroke-width: 2px !important;
-    }
-
-    .barcode-node-level-1.node-missed {
-      stroke-width: 3px !important;
-    }
-
-    .barcode-node[class~=default-highlight] {
-      fill: black !important;
-    }
-
-    .barcode-node.node-missed_min-stroke {
-      fill: white !important;
-      stroke: #aaa !important;
-      stroke-width: 0.5px !important;
-      opacity: 0.4;
-    }
-
-    .barcode-node.node-missed {
-      fill: white !important;
-      stroke: #aaa !important;
-      //stroke-width: 0.1rem !important;
-      opacity: 0.4;
-    }
-
-    .barcode-node.node-missed-wide {
-      fill: white !important;
-      stroke: #aaa !important;
-      stroke-width: 0.1rem !important;
-    }
-
-    .barcode-node.node-missed-narrow {
-      fill: #ccc !important;
-      //stroke: gray !important;
-      //stroke-width: 1px !important;
-    }
-
-    .barcode-node[class~=selection-unhighlight] {
-      opacity: 0.2;
-    }
-    //  barcodeTree中的节点的padding的部分在locked的情况下的
-    .barcode-node[class~=cancel-node] {
-      opacity: 0.05;
-    }
-
-    .barcode-node.selection-sibling-highlight[class~=selection-unhighlight] {
-      opacity: 0.4;
-    }
-
-    .barcode-node[class~=selection-highlight], .supertree-icicle-node[class~=selection-highlight] {
-      opacity: 1;
-    }
-
-    .barcode-node[class~=distribution-unhighlight] {
-      opacity: 0.1;
-    }
-
-    .barcode-node[class~=unhighlight], .tooth[class~=unhighlight], .collapse-triangle[class~=unhighlight], .stat-summary[class~=unhighlight] {
-      opacity: 0.2;
-    }
-
-    .barcode-node.sibling-highlight[class~=unhighlight], .tooth.sibling-highlight[class~=unhighlight], .collapse-triangle.sibling-highlight[class~=unhighlight] {
-      opacity: 0.4;
-    }
-
-    .barcode-node[class~=sort-hovering-highlight] {
-      //fill: #1F77B4;
-      stroke: #1f77b4 !important;
-      stroke-width: 0.1rem;
-    }
-
-    .barcode-node[class~=sort-selection-highlight], .padding-covered-rect[class~=sort-selection-highlight] {
-      //fill: #1f77b3 !important;
-      stroke: #1f77b4 !important;
-      stroke-width: 0.1rem;
-    }
-
-    .barcode-node[class~=father-highlight], .supertree-icicle-node[class~=father-highlight] {
-      //fill: #1F77B4;
-    }
-
-    .tooth[class~=current-highlight] {
-      fill: black;
-    }
-
-    .barcode-node[class~=children-highlight], .supertree-icicle-node[class~=children-highlight] {
-      //fill: #a6cee3;
-    }
-
-    .barcode-node[class~=added-node-highlight] {
-      fill: #a1d76a !important
-    }
-
-    .barcode-node[class~=missed-node-highlight] {
-      stroke: #e9a3c9 !important;
-      stroke-width: 0.05rem;
-      opacity: 0.4;
-    }
-
-    .barcode-node[class~=missed-node-highlight_min-stroke] {
-      stroke: #e9a3c9 !important;
-      //stroke-width: 1.5px !important;
-      opacity: 0.4;
-    }
-
-    .barcode-node[class~=missed-node-highlight_max-stroke] {
-      stroke: #e9a3c9 !important;
-      //stroke-width: 4px;
-      opacity: 0.4;
-    }
-
-    .barcode-node[class~=same-node-highlight] {
-      fill: black !important
-    }
-
-    .barcode-node[class~=sibling-highlight], .tooth[class~=sibling-highlight], .supertree-icicle-node[class~=sibling-highlight], .collapse-triangle[class~=sibling-highlight] {
-      fill: #d8b365 !important; //#5B647C//#d8b365;//#b2df8a;
-    }
-
-    .barcode-node[class~=selection-sibling-highlight], .tooth[class~=selection-sibling-highlight], .supertree-icicle-node[class~=selection-sibling-highlight] {
-      fill: #d8b365;
-    }
-
-    .covered-rect[class~=mouseover-highlight] {
-      fill: none
-    }
-
-    .padding-covered-rect[class~=mouseover-highlight] {
-      stroke: 0.1rem black;
-    }
-
-    .link-circle {
-      fill: black;
-    }
-
-    .node-link {
-      stroke: #4d4d4d;
-    }
-
-    .opacity-bg {
-      opacity: 0;
-    }
-
-    .barcode-link {
-      stroke-width: 1px;
-      stroke: gray;
-    }
-
-    .select-icon {
-      opacity: 0.5;
+  .barcode-tree-collection-div {
+    width: 100%;
+    height: 100%;
+    .barcode-single-tree-div {
+      position: absolute;
+      left: 0%;
+      right: 0%;
     }
   }
 }
